# citrus

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  help.html  index.html  pyproject.toml  search-index.js  settings.html  src-files.js
.github/workflows/: deploy-docs.yml
book/: book.toml
book/src/: chapter_1.md
book/theme/: index.hbs
citrus/: __init__.py  citrus.py  configure.py  constants.py  datastructures.py  gridio.py  index.html  lime.py  sidebar-items.js  structarrays.py  utils.py
citrus-book/: book.toml
citrus-book/src/: README.md  SUMMARY.md
citrus/citrus/: all.html
citrus/collparts/: fn.check_user_density_weights.html  index.html  struct.CollisionalPartnerData.html  struct.MolData.html  struct.Rates.html
citrus/config/: enum.Sampling.html  fn.load_config.html  index.html  struct.Config.html  struct.Parameters.html
citrus/constants/: constant.AMU_CGS.html  constant.ARCSEC_TO_RAD.html  constant.AU_CGS.html  constant.CITRUS_RT_EPS.html  constant.GRAVITATIONAL_CONST_CGS.html  constant.GRAVITATIONAL_CONST_SI.html  constant.HCKB.html  constant.HPIP.html  constant.JULIAN_YEAR_SI.html  constant.LOCAL_CMB_TEMP_SI.html  constant.PLANCK_CGS.html  constant.PLANCK_SI.html  constant.SOLAR_MASS_CGS.html  constant.SOLAR_MASS_SI.html  constant.SOLAR_RADIUS_SI.html  constant.SPEED_OF_LIGHT_CGS.html  constant.STEFAN_BOLTZMANN_SI.html  constant.TYPICAL_ISM_DENS.html  index.html  sidebar-items.js
citrus/defaults/: constant.DENSITY_EXP.html  constant.FIX_RANDOM_SEEDS.html  constant.MAX_NUM_HIGH.html  constant.N_DIMS.html  (+12 more)
docs/: help.html  index.html  search-index.js  settings.html  src-files.js
example/: input.toml  model.py  run.py
examples/: input.toml  model.rs
src/: collparts.rs  config.rs  constants.rs  defaults.rs  dims.rs  engine.rs  grid.rs  interface.rs  io.rs  lib.rs  lines.rs  macros.rs  main.rs  messages.rs  models.rs  pops.rs  raytrace.rs  solver.rs  source.rs  tree.rs  types.rs  utils.jl  utils.rs
static/: index.html
(+609 files in other folders)
