[package]
name = "citrus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
blas-src = { version = "0.11.1", features = ["accelerate"] }
fitsio = "0.21.6"
ndarray = { version = "0.16.1", features = ["rayon", "serde", "blas"] }
ndarray-linalg = "0.17.0"
prosia-extensions = "0.1.5"
qhull = { git = "https://github.com/LucaCiucci/qhull-rs" }
rand = "0.9.1"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"

[build-dependencies]
autotools = "0.2"

[profile.release]
lto = true        # Link-time optimization
codegen-units = 1 # Slower build times, but more optimization
opt-level = 3     # Highest optimization level
